--- a/app/angular/static/app/index.html
+++ b/app/angular/static/app/index.html
@@ -8,7 +8,6 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/foundation/css/foundation.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -21,36 +20,39 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container">
-      <div class="header">
-        <nav class="top-bar" data-topbar role="navigation">
-          <ul>
-            <li class="active"><a ng-href="#">Home</a></li>
-            <li><a ng-href="#/about">About</a></li>
-            <li><a ng-href="#">Contact</a></li>
-          </ul>
-        </nav>
-        <h3 class="text-muted">static</h3>
+    <div class="row">
+      <div class="medium-2 columns icon-bar-container">
+        <div class="icon-bar vertical five-up">
+            <a class="item" ng-href="#/main">
+              <i class="fi-home"></i>
+              <label>Home</label>
+            </a>
+            <a class="item" ng-href="#/dates">
+              <i class="fi-calendar"></i>
+              <label>Meine Termine</label>
+            </a>
+            <a class="item" ng-href="#/places">
+              <i class="fi-marker"></i>
+              <label>Orte</label>
+            </a>
+            <a class="item" ng-href="#/mediapool">
+              <i class="fi-folder"></i>
+              <label>Medienpool</label>
+            </a>
+        </div>
       </div>
+      <div class="medium-10 columns">
+          <div class="header">
+          </div>
 
-      <div ng-view=""></div>
+          <div ng-view=""></div>
 
-      <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+          <div class="footer">
+          </div>
+        </div>
       </div>
     </div>
 
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
 
     <!-- build:js(.) scripts/oldieshim.js -->
     <!--[if lt IE 9]>
@@ -83,6 +85,9 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/dates.js"></script>
+        <script src="scripts/controllers/places.js"></script>
+        <script src="scripts/controllers/mediapool.js"></script>
         <!-- endbuild -->
 </body>
 </html>
