Some more foundation stuff added

--- a/app/angular/static/app/index.html
+++ b/app/angular/static/app/index.html
@@ -39,6 +39,23 @@
               <i class="fi-folder"></i>
               <label>Medienpool</label>
             </a>
+            <a class="item" ng-href="#/tools">
+              <i class="fi-wrench"></i>
+              <label>Tools</label>
+            </a>
+            <a class="item" ng-href="#/account">
+              <i class="fi-widget"></i>
+              <label>Mein Konto</label>
+            </a>
+            <a class="item" ng-href="#/users">
+              <i class="fi-torsos-female-male"></i>
+              <label>Benutzer_innen</label>
+            </a>
+            <a class="item" ng-href="#/bugs">
+              <i class="fi-ticket"></i>
+              <label>Fehler melden</label>
+            </a>
+
         </div>
       </div>
       <div class="medium-10 columns">
@@ -88,6 +105,10 @@
         <script src="scripts/controllers/dates.js"></script>
         <script src="scripts/controllers/places.js"></script>
         <script src="scripts/controllers/mediapool.js"></script>
+        <script src="scripts/controllers/tools.js"></script>
+        <script src="scripts/controllers/account.js"></script>
+        <script src="scripts/controllers/bugs.js"></script>
+        <script src="scripts/controllers/users.js"></script>
         <!-- endbuild -->
 </body>
 </html>
