--- a/app/angular/static/app/index.html
+++ b/app/angular/static/app/index.html
@@ -27,7 +27,7 @@
               <i class="fi-home"></i>
               <label>Home</label>
             </a>
-            <a class="item" ng-href="#/dates">
+            <a class="item" ng-href="#/events">
               <i class="fi-calendar"></i>
               <label>Meine Termine</label>
             </a>
@@ -95,19 +95,25 @@
     <script src="bower_components/jquery.cookie/jquery.cookie.js"></script>
     <script src="bower_components/jquery-placeholder/jquery.placeholder.js"></script>
     <script src="bower_components/foundation/js/foundation.js"></script>
+    <script src="bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="bower_components/angular-ui-date/src/date.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+
+    <script src="bower_components/jquery-ui/ui/i18n/datepicker-de.js"></script>
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/dates.js"></script>
+        <script src="scripts/controllers/events.js"></script>
         <script src="scripts/controllers/places.js"></script>
         <script src="scripts/controllers/mediapool.js"></script>
         <script src="scripts/controllers/tools.js"></script>
         <script src="scripts/controllers/account.js"></script>
         <script src="scripts/controllers/bugs.js"></script>
         <script src="scripts/controllers/users.js"></script>
+        <script src="scripts/controllers/event.js"></script>
+        <script src="scripts/filters/range.js"></script>
         <!-- endbuild -->
 </body>
 </html>
