--- a/app/angular/static/app/index.html
+++ b/app/angular/static/app/index.html
@@ -114,6 +114,7 @@
         <script src="scripts/controllers/users.js"></script>
         <script src="scripts/controllers/event.js"></script>
         <script src="scripts/filters/range.js"></script>
+        <script src="scripts/services/api-url.js"></script>
         <!-- endbuild -->
 </body>
 </html>
