Added rudimentary display of place

--- a/app/angular/static/app/index.html
+++ b/app/angular/static/app/index.html
@@ -115,6 +115,7 @@
         <script src="scripts/controllers/event.js"></script>
         <script src="scripts/filters/range.js"></script>
         <script src="scripts/services/api-url.js"></script>
+        <script src="scripts/controllers/place.js"></script>
         <!-- endbuild -->
 </body>
 </html>
